ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: go-react-app.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 83
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: go-react-backend.info 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: goappb-service
              port:
                number: 9091
